# banglore-house-prediction

./: .gitignore  README.md  pyproject.toml
client/: app.html  app.js
model/: Benguluru House Predection.ipynb  banglore_home_prices_final.ipynb
server/: package.txt  server.py  util.py
server/artifacts/: banglore_home_prices_model.pickle  columns.json  location.json  location.pickle
server/myEnv/: pyvenv.cfg
server/myEnv/Scripts/: activate  activate.bat
server/static/: app.js  index.html
