[project]
name = "flask_ml_app"
version = "0.1.0"
description = "A Flask project with scikit-learn, numpy, and pandas"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "scikit-learn",
    "numpy",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
    "ipython"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
